[tool.poetry]
name = "asynch"
version = "0.2.4"
description = "An asyncio driver for ClickHouse with native TCP support"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/asynch"
repository = "https://github.com/long2ice/asynch.git"
documentation = "https://github.com/long2ice/asynch"
keywords = [
    "asyncio",
    "clickhouse",
    "column-oriented",
    "database",
    "driver",
    "python",
    "package",
]
packages = [
    { include = "asynch" }
]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
leb128 = "*"
pytz = "*"
lz4 = "*"
clickhouse-cityhash = { version = "*", optional = true }
zstd = "*"
tzlocal = "*"
ciso8601 = "*"

[tool.poetry.extras]
compression = ["clickhouse-cityhash"]

[tool.poetry.dev-dependencies]
ruff = "*"
isort = "*"
black = "*"
pytest = "*"
pytest-mock = "*"
bandit = "*"
pytest-asyncio = "*"
clickhouse-driver = "*"
uvloop = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
addopts = "--maxfail=1 -s -vvv"
asyncio_mode = "auto"
minversion = "7.0"
testpaths = [
    "tests"
]
xfail_strict = true

[tool.ruff]
line-length = 100
